добавил шапки в шаблоны

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %} главная страница {% endblock %}
+{% block header %} главная страница {% endblock %}
 {% block content %}
     <main> 
       <!-- класс py-5 создает отступы сверху и снизу блока -->
