--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -30,7 +30,7 @@
                 {% endfor %}
               </div>
             {% endif %}
-            <form method="post" action="{% url 'posts:post_create' %}">
+            <form method="post" enctype="multipart/form-data" action="{% url 'posts:post_create' %}">
               {% csrf_token %}
               {% for field in form %}
                 <div class="form-group">
