--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load thumbnail %}
 {% block title %}
   Пост {{ post.text|truncatechars:30}}
 {% endblock %}
@@ -21,6 +22,7 @@
               {% endif %}
             <li class="list-group-item">
               Автор: {{post.author.get_full_name}}
+              <a href="{% url 'posts:profile' post.author %}"></a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
               Всего постов автора:  <span >{{ post.author.posts.count }}</span>
@@ -33,6 +35,9 @@
           </ul>
         </aside>
         <article class="col-12 col-md-9">
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+          {% endthumbnail %}
           <p>
             {{post.text|linebreaksbr}}
             {% if user.id ==  post.author.id %}
