--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -18,7 +18,7 @@
             <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
           </article>       
           {% if post.group  %}
-            <a href="{% url 'posts:group_posts'  post.group.slug  %}">все посты группы {post.name}</a>        
+            <a href="{% url 'posts:group_posts'  post.group.slug  %}">все посты группы {{post.group}}</a>        
           {% endif %}
           {% if not forloop.last %}
             <hr>
